# solana-demo

./: .gitignore  README.md
client/: index.js  package.json
program/: Cargo.toml
program/src/: lib.rs
