[package]
name = "solana_demo"
version = "0.1.0"
edition = "2021"

[lib]
name = "solana_demo"
crate-type = ["cdylib", "lib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
borsh = { version = "0.10.3" }
borsh-derive = { version = "0.10.3" }
chrono = "0.4.33"
solana-program = "1.17.17"
spl-token = "4.0.0"

[dev-dependencies]
solana-program-test = "1.17.17"
solana-sdk = "1.17.17"

